[gd_scene load_steps=23 format=3 uid="uid://d2l1oof6loxxe"]

[ext_resource type="Script" uid="uid://css8fudk4wvua" path="res://Base/finite_state_machine.gd" id="1_6ddrn"]
[ext_resource type="Script" uid="uid://d0hh4ylil2c42" path="res://Player/player.gd" id="1_62trq"]
[ext_resource type="Texture2D" uid="uid://cwkal2f5yptyh" path="res://Player/pixil-frame-0 (5).png" id="3_lnawk"]
[ext_resource type="Resource" uid="uid://dvyc820lqfjrx" path="res://Player/DefaultPlayerCharacter.tres" id="3_vcj7w"]
[ext_resource type="Texture2D" uid="uid://cjooboer2dbvg" path="res://Player/test_attack-Sheet.png" id="6_1m13p"]
[ext_resource type="Script" uid="uid://c2e8n7ejelcjv" path="res://Player/player_movement.gd" id="8_ip4se"]
[ext_resource type="Script" uid="uid://b1ogharj5fnex" path="res://Player/player_default.gd" id="8_u63yy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3kltw"]
atlas = ExtResource("3_lnawk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jmcr"]
atlas = ExtResource("6_1m13p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jdja"]
atlas = ExtResource("6_1m13p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gpo4"]
atlas = ExtResource("6_1m13p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sj85q"]
atlas = ExtResource("6_1m13p")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd88k"]
atlas = ExtResource("6_1m13p")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpohf"]
atlas = ExtResource("3_lnawk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pceiq"]
atlas = ExtResource("3_lnawk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_yvmua"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kltw")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jmcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jdja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gpo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sj85q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd88k")
}],
"loop": true,
"name": &"sword_swing",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpohf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pceiq")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gmy1i"]
radius = 4.0
height = 9.0

[sub_resource type="Animation" id="Animation_rlvre"]
length = 0.001

[sub_resource type="Animation" id="Animation_dkjjd"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}

[sub_resource type="Animation" id="Animation_wm2vr"]
resource_name = "swing_attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"sword_swing"]
}

[sub_resource type="Animation" id="Animation_13m0h"]
resource_name = "walk"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h2u1g"]
_data = {
&"RESET": SubResource("Animation_rlvre"),
&"idle": SubResource("Animation_dkjjd"),
&"swing_attack": SubResource("Animation_wm2vr"),
&"walk": SubResource("Animation_13m0h")
}

[node name="Player" type="CharacterBody2D" groups=["Bodies", "Player"]]
collision_layer = 2
collision_mask = 5
floor_snap_length = 3.0
platform_floor_layers = 4294967291
safe_margin = 0.01
script = ExtResource("1_62trq")
character_data = ExtResource("3_vcj7w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_yvmua")
animation = &"idle"

[node name="WorldCollision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.4)
shape = SubResource("CapsuleShape2D_gmy1i")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
editor_description = "your mother"
libraries = {
&"": SubResource("AnimationLibrary_h2u1g")
}

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
enabled = false
process_callback = 0
position_smoothing_speed = 20.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.15
drag_top_margin = 0.15
drag_right_margin = 0.15
drag_bottom_margin = 0.15
editor_draw_drag_margin = true

[node name="Detection" type="Node2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("1_6ddrn")
state = NodePath("PlayerDefault")

[node name="PlayerDefault" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animation", "animator")]
script = ExtResource("8_u63yy")
actor = NodePath("../..")
animation = NodePath("../../AnimationPlayer")
animator = NodePath("../../AnimatedSprite2D")

[node name="PlayerMovement" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("actor", "animator", "animation")]
script = ExtResource("8_ip4se")
actor = NodePath("../..")
animator = NodePath("../../AnimatedSprite2D")
animation = NodePath("../../AnimationPlayer")
